# contexis

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yml  go.mod  go.sum  pyproject.toml  requirements-dev.txt
.github/workflows/: build-and-helm.yml  goreleaser-slsa3-publish  security.yml
charts/contexis-app/: Chart.yaml  values.yaml
config/environments/: development-dev.yaml  development.yaml
contexts/ContentPipeline/: workflow_coordinator.ctx
contexts/CustomerDocs/: README.md  rag_agent.ctx
contexts/EmailBot/: emailbot.ctx
contexts/SimpleBot/: simplebot.ctx
contexts/SupportBot/: supportbot.ctx
deploy/: argo-rollout.yaml  externalsecrets.yaml
docs/: agent-generator.md  cli.md  deployment.md  memory.md  model_providers.md  overview.md  runtime.md  security.md  technical_rfc.md
docs/api/: README.md
docs/config/: environment-variables.md
docs/development/: gomarkdoc.md
docs/examples/: hugging-face.md  oss_models.md
docs/guides/: getting-started.md  hugging-face.md
docs/integrations/: crewai.md  langchain.md  langgraph.md  n8n.md  pinecone.md
examples/agent/: README.md
examples/hr-chatbot/: README.md  policies.txt
examples/rag/: README.md
examples/workflow/: README.md
memory/ContentPipeline/: workflow_state.yaml
memory/CustomerDocs/: memory_config.yaml
memory/EmailBot/: memory_config.yaml
memory/SimpleBot/: memory_config.yaml
memory/SupportBot/: memory_config.yaml
prompts/CustomerDocs/: no_results.md  search_response.md
scripts/: install.sh  setup-dev.sh
src/cli/: errors.go  main.go
src/providers/: local_provider.py
templates/agent/: agent_behavior.yaml  support_bot.ctx
templates/docker/: Dockerfile
templates/plugin/: README.md  plugin.json
templates/rag/: support_agent.ctx  support_response.md
templates/workflow/: step_research.md  step_review.md  step_write.md  workflow_coordinator.ctx  workflow_definition.yaml  workflow_integration.py  workflow_state.yaml
tests/: README.md  rules.yaml  test_config.yaml  test_runner.go
tests/ContentPipeline/: workflow_integration.py
tests/CustomerDocs/: rag_drift_test.yaml  test_rag.py
tests/EmailBot/: agent_behavior.yaml
tests/SimpleBot/: agent_behavior.yaml
tests/SupportBot/: agent_behavior.yaml
tests/integration/: agent_generator_integration_test.go  plugin_lifecycle_test.go
tests/reports/: drift_CustomerDocs.json  drift_index.json  go_e2e.txt  go_integration.txt  go_tests.json  go_unit.txt  junit-drift.xml
tests/unit/: agent_generator_test.go  server_hf_test.go  (+4 more)
(+145 files in other folders)
